--- a/web/pom.xml
+++ b/web/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.9.9</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
